# chicken-counting-and-tracking-system

./: README.md  app.py  config.yaml  pyproject.toml
src/: __init__.py  detector.py  tracker.py
