[project]
name = "chicken-counting"
version = "0.2.0"
description = "Real-time chicken counting and tracking using YOLO26s + ByteTrack with Gradio UI."
authors = [{name = "Saifullah Channa", email = "hello@saify.me"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
keywords = ["yolo", "yolo26", "chicken", "detection", "tracking", "bytetrack", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "ultralytics>=8.3.50",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "supervision>=0.25.0",
    "gradio>=4.0.0",
    "pyyaml>=6.0",
    "tqdm>=4.65.0",
    "huggingface-hub>=0.20.0",
]

[project.optional-dependencies]
train = [
    "roboflow>=1.0.0",
    "tensorboard>=2.15.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
